<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context="com.example.android.practice.MainActivity"
        android:id="@+id/activity_main"
        style="@style/rootLayout">

        <LinearLayout style="@style/LayoutAttr1.Horizontal">

            <ViewSwitcher
                android:id="@+id/view_switcherA"
                style="@style/LayoutAttr2.ViewSwitcher">

                <EditText
                    android:id="@+id/edit_playerA"
                    style="@style/LayoutAttr2.PlayerNameEdit"
                    android:layout_marginStart="5dp"
                    android:hint="@string/enter_name" />

                <TextView
                    android:id="@+id/hidden_textViewA"
                    style="@style/LayoutAttr2.PlayerNameTv" />

            </ViewSwitcher>

            <ViewSwitcher
                android:id="@+id/view_switcherB"
                style="@style/LayoutAttr2.ViewSwitcher">

                <EditText
                    android:id="@+id/edit_playerB"
                    style="@style/LayoutAttr2.PlayerNameEdit"
                    android:layout_marginEnd="5dp"
                    android:hint="@string/enter_name" />

                <TextView
                    android:id="@+id/hidden_textViewB"
                    style="@style/LayoutAttr2.PlayerNameTv" />

            </ViewSwitcher>
        </LinearLayout>

        <RelativeLayout style="@style/LayoutAttr1">

            <Button
                android:id="@+id/enterNames"
                style="@style/LayoutAttr2.EnterButton"
                android:onClick="setPlayerNames"
                android:text="@string/button_enter" />

        </RelativeLayout>

        <LinearLayout style="@style/LayoutAttr1.Horizontal">

            <LinearLayout style="@style/WeightLayout">

                <TextView
                    android:id="@+id/score_playerA"
                    style="@style/LayoutAttr2.Score"
                    android:text="@string/default_score" />

                <Button
                    android:id="@+id/one_stroke_playerA"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerA"
                    android:text="@string/button_one_stroke" />

                <Button
                    android:id="@+id/two_stroke_playerA"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerA"
                    android:text="@string/button_two_strokes" />

                <Button
                    android:id="@+id/three_stroke_playerA"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerA"
                    android:text="@string/button_three_strokes" />

                <Button
                    android:id="@+id/four_stroke_playerA"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerA"
                    android:text="@string/button_four_strokes" />

                <Button
                    android:id="@+id/five_stroke_playerA"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerA"
                    android:text="@string/button_five_strokes" />

                <Button
                    android:id="@+id/six_stroke_playerA"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerA"
                    android:text="@string/button_six_strokes" />

            </LinearLayout>

            <LinearLayout style="@style/WeightLayout">

                <TextView
                    android:id="@+id/score_playerB"
                    style="@style/LayoutAttr2.Score"
                    android:text="@string/default_score" />

                <Button
                    android:id="@+id/one_stroke_playerB"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerB"
                    android:text="@string/button_one_stroke" />

                <Button
                    android:id="@+id/two_stroke_playerB"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerB"
                    android:text="@string/button_two_strokes" />

                <Button
                    android:id="@+id/three_stroke_playerB"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerB"
                    android:text="@string/button_three_strokes" />

                <Button
                    android:id="@+id/four_stroke_playerB"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerB"
                    android:text="@string/button_four_strokes" />

                <Button
                    android:id="@+id/five_stroke_playerB"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerB"
                    android:text="@string/button_five_strokes" />

                <Button
                    android:id="@+id/six_stroke_playerB"
                    style="@style/LayoutAttr1.Button"
                    android:onClick="addScorePlayerB"
                    android:text="@string/button_six_strokes" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/holes_count"
            style="@style/LayoutAttr2.PlayedHoles" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <Button
                android:id="@+id/undo_button"
                style="@style/LayoutAttr2.UndoResetButton"
                android:onClick="undoButton"
                android:text="@string/button_undo" />

            <Button
                android:id="@+id/reset_score"
                style="@style/LayoutAttr2.UndoResetButton"
                android:layout_toEndOf="@id/undo_button"
                android:text="@string/button_reset" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>